fixed css issues in sidebar and alignment in middlebar

--- a/client/src/components/HomePage/RightSideBar.css
+++ b/client/src/components/HomePage/RightSideBar.css
@@ -1,76 +1,73 @@
 .side-bar {
   float: right;
   width: 300px;
-  margin: 15px 0 15px;
+  margin: 0 0 15px;
   padding-left: 5px;
   background-color: none;
   height: 100%;
+}
 
-  .s-sidebarwidget__yellow {
-    border-color: #675c37;
-    background-color: #464236;
-    color: #f2f2f3 !important;
-    margin-top: 24px;
-  }
-
-  .s-sidebarwidget__yellow .s-sidebarwidget--header, .s-sidebarwidget__yellow .s-sidebarwidget--content {
-    border-color: #675c37;
-  }
-
-  .s-sidebarwidget__yellow .s-sidebarwidget--header {
-    background-color: #524b38;
-    color: #cfd2d6;
-  }
-
-  .s-anchors .s-anchors.s-anchors__grayscale a:not(.s-link), .s-anchors.s-anchors__grayscale a:not(.s-link) {
-    color: #f2f2f3;
-  }
-
-  .fc-danger {
-    color: #c4524f;
-  }
-
-  .show-tags {
-    display: inline-block;
-    margin: 5px 0;
-    color: #0077cc;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 13px;
-  }
-
-  .side-bar-tags {
+div.side-bar-tags {
     box-sizing: inherit;
     word-wrap: break-word;
     margin-bottom: 20px;
     color: #242729;
     margin-top: 24px;
-
-    .tag-headline {
-      color: #3c4146;
-      font-size: 18px;
-      font-weight: 400;
-      margin-bottom: 18px;
-      margin-top: 0;
-    }
-
-    .tag-content {
-      box-sizing: inherit;
-      margin-bottom: 8px;
-
-      .tag-mult {
-        margin-right: 4px;
-        color: #848d95;
-
-        span {
-          font-size: 11px;
-          color: #6a737c;
-
-        }
-      }
-    }
-  }
+    padding-left: 16px;
 }
+
+.tag-headline {
+  color: #3c4146;
+  font-size: 18px;
+  font-weight: 400;
+  margin-bottom: 18px;
+  margin-top: 0;
+}
+
+.tag-content {
+  box-sizing: inherit;
+  margin-bottom: 8px;
+}
+
+.tag-mult {
+  margin-right: 4px;
+  color: #848d95;
+}
+
+span {
+  font-size: 11px;
+  color: #6a737c;
+}
+
+.tags {
+  margin-top: 20px;
+  margin-left: 30px;
+}
+
+.show-tags {
+
+  margin: 5px 0;
+  color: #0077cc;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 13px;
+}
+
+.s-sidebarwidget__yellow {
+  border-color: #675c37;
+  margin-top: 24px;
+}
+
+.s-sidebarwidget__yellow .s-sidebarwidget--header, .s-sidebarwidget__yellow .s-sidebarwidget--content {
+  border-color: #675c37;
+}
+
+
+.fc-danger {
+  color: #c4524f;
+}
+
+
 
 .meta-image {
     width: 14px;
