--- a/client/src/components/Post.css
+++ b/client/src/components/Post.css
@@ -9,6 +9,9 @@
 
 #content {
   padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 82%;
 }
 
 #mainbar {
